# weibian

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
docs/: 1lab.md  architecture-thoughts.md  blog-source.md  config.md  corruption.md  coverage.md  datalog.md  egglog.md  extract.md  forester.md  hooks.md  invariants-discussion.md  metadata.md  metadata2.md  ocaml-datalog.md  quality.md  quartz.md  rerender_test1.md  shake.md  stage12.md  stage4.md  stage5-differences.md  stage5-differences2.md  stage5-differences3.md  stage5-plan1.md  stage5-plan2.md  stage5.md  stage55-invalidation.md  stage55.md  stage6.md  stages.md  table-of-contents.md  tera.md  todo_cleanup.md  transclusion.md  typst-cli.md
proptest-regressions/compiler/: extract.txt  tests.txt
proptest-regressions/compiler/tests/: extract.txt
src/: args.rs  build.rs  compile.rs  compiler.rs  config.rs  file_store.rs  files.rs  import_graph.rs  lib.rs  main.rs  transclusion_graph.rs  watch.rs  world.rs
src/compiler/: extract.rs  render.rs  tests.rs
src/compiler/tests/: config.rs  driver.rs  extract.rs  mock.rs  model.rs  process_stateless.rs  property.rs  reference_compiler.rs  render.rs  stateless.rs
