[package]
name = "weibian"
version = "1.0.0-rc.5"
edition = "2024"

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
datafrog = "2"
petgraph = { version = "0.6", default-features = false, features = ["graphmap"] }
anyhow = "1.0.102"
comemo = "0.5.1"
notify-debouncer-full = "0.6.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
ecow = "0.2.5"
figment = { version = "0.10.8", features = ["toml"] }
globset = "0.4.16"
jiff = "0.2.23"
serde = { version = "1.0.210", features = ["derive"] }
typst = { git = "https://github.com/typst/typst", rev = "8626c05abceea8514cbbb4eabcf1a77cf70bad19" }
typst-html = { git = "https://github.com/typst/typst", rev = "8626c05abceea8514cbbb4eabcf1a77cf70bad19" }
typst-kit = { git = "https://github.com/typst/typst", rev = "8626c05abceea8514cbbb4eabcf1a77cf70bad19", features = ["system-files", "scan-fonts", "embedded-fonts", "emit-diagnostics", "system-downloader", "vendor-openssl"] }
typst-syntax = { git = "https://github.com/typst/typst", rev = "8626c05abceea8514cbbb4eabcf1a77cf70bad19" }
termcolor = "1.4.1"
walkdir = "2.5.0"
dom_query = "0.26.0"
